--- a/week-01/homework.ipynb
+++ b/week-01/homework.ipynb
@@ -77,7 +77,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uhvN5mtWUH8K",
-        "outputId": "cb698b33-1ddd-4276-e319-3f45cb54b789"
+        "outputId": "33efd0cc-1e4b-4e48-bf85-b80c71dc47e1"
       },
       "outputs": [
         {
@@ -135,7 +135,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tyz1r6CATYbI",
-        "outputId": "926e107f-8ec3-4430-b173-cedf9b46df0e"
+        "outputId": "9099b736-fef5-4b1c-f7b2-1f7b26e47122"
       },
       "outputs": [
         {
@@ -143,9 +143,7 @@
           "name": "stdout",
           "text": [
             "4\n",
-            "2\n",
-            "3\n",
-            "3.0\n"
+            "3\n"
           ]
         }
       ],
@@ -154,9 +152,8 @@
         "y = 1\n",
         "\n",
         "print(x + y)\n",
-        "print(x - y)\n",
         "print(x * y)\n",
-        "print(x / y)\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -203,7 +200,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9wmJSO3_ZIv9",
-        "outputId": "252de88d-31dc-452d-eccb-23eb6db98e2b"
+        "outputId": "b5f501f6-65aa-4495-80f8-f9bb07b2d616"
       },
       "outputs": [
         {
@@ -258,7 +255,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KRprD_gjaZP3",
-        "outputId": "ed551f19-d9dd-41da-b95e-936ef6b982b7"
+        "outputId": "2fa6d2cd-943d-425d-ab02-31b85cf4cd8d"
       },
       "outputs": [
         {
@@ -317,7 +314,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ta3fjwXtZJw5",
-        "outputId": "7beb7769-7b27-48e4-d594-1875c864a410"
+        "outputId": "afc518bf-f4f8-4398-ca68-e2c24c261950"
       },
       "outputs": [
         {
@@ -374,14 +371,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZVA2wZw1ax6Y",
-        "outputId": "9f6f2943-dd96-44df-e92e-f8c9c10828fd"
+        "outputId": "21edeb1f-04bc-4059-db7c-4953818775fe"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "initials are: jl\n"
+            "Initials are: jl\n"
           ]
         }
       ],
@@ -392,7 +389,7 @@
         "\n",
         "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
         "initials = first_name[0] + last_name[0]\n",
-        "print(\"initials are:\", initials)\n"
+        "print(\"Initials are:\", initials)\n"
       ]
     },
     {
@@ -431,7 +428,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j2s27DT0bZK-",
-        "outputId": "8c3c6b07-8084-47e9-c520-1a5b4decfc88"
+        "outputId": "e5282966-18d1-4852-9a57-c35e47b73f7e"
       },
       "outputs": [
         {
@@ -484,7 +481,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "alYsciPfWzL7",
-        "outputId": "c10b4e3b-43c1-4b89-9af1-1d3a4da13536"
+        "outputId": "3bc06c1e-0f86-481b-ed8e-b614c09b9a1a"
       },
       "outputs": [
         {
@@ -535,11 +532,11 @@
         "print(\"my_list =\", my_list)"
       ],
       "metadata": {
-        "id": "6X5U3c_LxlYC",
-        "outputId": "809d67ff-e465-44e9-c253-08583a21642e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6X5U3c_LxlYC",
+        "outputId": "bcef5986-bc4c-4868-b48d-2ec0a7812a79"
       },
       "execution_count": 9,
       "outputs": [
@@ -580,7 +577,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bs8eJjRacV0c",
-        "outputId": "d639c16a-926a-4027-9b06-a521c11dd1ba"
+        "outputId": "c86461c3-37c8-4efe-e3a3-89b68bc408e7"
       },
       "outputs": [
         {
@@ -641,7 +638,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aViPf6m6c1Xn",
-        "outputId": "584110ff-f572-4e98-a643-a2d81030e5f9"
+        "outputId": "687f1eb9-0f4f-498b-e159-313aa162e315"
       },
       "outputs": [
         {
@@ -703,7 +700,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "guK2OZkEdY4x",
-        "outputId": "0382177a-33d1-4827-a2cc-fb02967c4635"
+        "outputId": "b67a8526-63fc-42eb-9c3f-1eeed9c652ce"
       },
       "outputs": [
         {
@@ -775,7 +772,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c46erJG9eF6Z",
-        "outputId": "9683e828-4039-43a1-eaaa-0ff81932f906"
+        "outputId": "0cda53e0-cd03-4c53-f586-8d438a870cc6"
       },
       "outputs": [
         {
