--- a/week-02/homework.ipynb
+++ b/week-02/homework.ipynb
@@ -3,8 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Alayit8/hello-world/blob/main/week-02/homework.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -78,28 +67,13 @@
       "source": [
         "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
         "\n",
-        "\n",
-        "''' the sum of the first four prime numbers'''\n",
-        "sum_of_primes = sum([2,3,5,7])\n",
-        "print(\"the sum of the first four primes is\", sum_of_primes)"
+        "\n"
       ],
       "metadata": {
-        "id": "uhvN5mtWUH8K",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "4c9bc66f-97e4-4eac-bed2-1c95e1b9019d"
+        "id": "uhvN5mtWUH8K"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "the sum of the first four primes is 17\n"
-          ]
-        }
-      ]
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -126,23 +100,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
-        "id": "tyz1r6CATYbI",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "1902a032-9084-4692-8946-b85e984ca30e"
+        "id": "tyz1r6CATYbI"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "y= 48\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# starter code\n",
         "x = 4\n",
@@ -150,9 +112,7 @@
         "\n",
         "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
         "\n",
-        "y = (coefficients[0] * (x **2)) + (coefficients[1] * x) + coefficients[2]\n",
-        "\n",
-        "print (\"y=\", y)\n"
+        "\n"
       ]
     },
     {
@@ -181,33 +141,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
-        "date = \"31-01-2026\"\n",
-        "year = date[-4:]\n",
-        "\n",
-        "month = date[3:5]\n",
-        "\n",
-        "day = date[0:2]\n",
-        "\n",
-        "print(\"The year is \" + year  + \" and month is \" + month +  \" and day is \" + day)"
+        "# TO DO: WRITE YOUR CODE/SOLUTION BELOW"
       ],
       "metadata": {
-        "id": "aP3t882EJ6CG",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "91caac36-9bf9-488d-b9e1-c4cbffd357fd"
+        "id": "aP3t882EJ6CG"
       },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The year is 2026 and month is 01 and day is 31\n"
-          ]
-        }
-      ]
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -246,14 +186,14 @@
       "source": [
         "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
         "def my_sum(a, b):\n",
-        "  return a + b\n",
+        " return a + b\n",
         "def my_diff(a, b):\n",
-        "  return a - b"
+        " return a - b"
       ],
       "metadata": {
         "id": "9wmJSO3_ZIv9"
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -264,32 +204,6 @@
       "metadata": {
         "id": "2rXzRl1Vhw_I"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# test cases for your functions\n",
-        "print('my_sum(3, 4) returned', my_sum(3, 4))\n",
-        "print('my_diff(3, 4) returned', my_diff(3, 4))\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "p3kQrCQZhzm-",
-        "outputId": "b07ca41a-011c-44e3-81a4-57cbe952e853"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "my_sum(3, 4) returned 7\n",
-            "my_diff(3, 4) returned -1\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -330,16 +244,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
-        "def calculate(a, b, c):\n",
-        "  return (7 * a) + (6 * b) + (5 *c) + 4\n",
-        "def mystery(a, b, c):\n",
-        "  return 7*a - 6 * b **2 + 5 * c**4"
+        "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n"
       ],
       "metadata": {
         "id": "KRprD_gjaZP3"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -359,23 +269,10 @@
         "print('mystery(3, 4, 5) returned', mystery(3, 4, 5))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "e3PC90GOjnCQ",
-        "outputId": "4d990eff-e5cc-4f76-cbf2-dd3b34efd942"
+        "id": "e3PC90GOjnCQ"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "calculate(3, 4, 5) returned 74\n",
-            "mystery(3, 4, 5) returned 3050\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -409,14 +306,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
-        "def intials(first, last):\n",
-        "  return first[0]+last[0]"
+        "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n"
       ],
       "metadata": {
         "id": "Ta3fjwXtZJw5"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -435,25 +330,10 @@
         "print('initials(\"paul\", \"mccartney\") returned', initials(\"paul\", \"mccartney\"))\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QxlFJkYgkZgv",
-        "outputId": "f2df3ffd-1131-4c09-d940-a3bab9690413"
+        "id": "QxlFJkYgkZgv"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "initials(\"john\", \"lennon\") returned jl\n",
-            "initials(\"paul\", \"mccartney\") returned pm\n",
-            "initials(\"george\", \"harrison\") returned gh\n",
-            "initials(\"ringo\", \"starr\") returned rs\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -491,18 +371,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
-        "''' A function with a list as parameter that return the sum of first and last elements.'''\n",
-        "def first_and_last(numbers):\n",
-        "  return numbers[0] + numbers[-1]\n",
-        "''' A function witha list as parameter that return the mean of all values in the list.'''\n",
-        "def mean_of_list(numbers):\n",
-        "  return sum(numbers) / len (numbers)"
+        "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n"
       ],
       "metadata": {
         "id": "ZVA2wZw1ax6Y"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -522,23 +396,10 @@
         "print('mean_of_list([6,1,7,3,5,8,2,3,6,1]) =', mean_of_list([6,1,7,3,5,8,2,3,6,1]))\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "qgQCOCJilHAK",
-        "outputId": "7368a65f-45fe-438b-f52a-8789eb142a1d"
+        "id": "qgQCOCJilHAK"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "first_and_list([6,1,7,3,5,8,2,3,6,1]) = 7\n",
-            "mean_of_list([6,1,7,3,5,8,2,3,6,1]) = 4.2\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -577,14 +438,12 @@
       "source": [
         "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
         "\n",
-        "''' A polynomial function that takes number x and 4 coefficients'''\n",
-        "def polynomial(x, coefficients):\n",
-        "  return coefficients[0] * x**3 + coefficients[1] * x ** 2 + coefficients[2] * x + coefficients[3]\n"
+        "\n"
       ],
       "metadata": {
         "id": "j2s27DT0bZK-"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -604,23 +463,10 @@
         "print('polynomial(2, [2, 3, 4, 6]) =', polynomial(2, [2, 3, 4, 6]))\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-rRwlRIIubQy",
-        "outputId": "5b09bb44-e819-43a1-a3b4-71f2411d8118"
+        "id": "-rRwlRIIubQy"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "polynomial(1, [2, 3, 4, 5]) = 14\n",
-            "polynomial(2, [2, 3, 4, 6]) = 42\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -652,15 +498,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
-        "def make_initial(names):\n",
-        "  return names[0][0] + names[1][0] + names[2][0]\n",
-        "\n"
+        "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n"
       ],
       "metadata": {
         "id": "VDCyb7f7bage"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -680,23 +523,10 @@
         "print('make_initials([\"james\", \"paul\", \"mccartney\"]) =', make_initials([\"james\", \"paul\", \"mccartney\"]))\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "TfKEdoAJvvXp",
-        "outputId": "24b0b849-ffdf-4a68-a3b9-701b656ac527"
+        "id": "TfKEdoAJvvXp"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "make_initials([\"john\", \"winston\", \"lennon\"]) = jwl\n",
-            "make_initials([\"james\", \"paul\", \"mccartney\"]) = jpm\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -737,14 +567,12 @@
     {
       "cell_type": "code",
       "source": [
-        "''' A function that Returns a anew list containing: First element, Middle Element, Last Element'''\n",
-        "def first_mid_last(my_list):\n",
-        "  return[my_list[0],my_list[len(my_list)//2],my_list[-1]]"
+        "# TO DO: WRITE YOUR CODE/SOLUTION BELOW"
       ],
       "metadata": {
         "id": "bs8eJjRacV0c"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -763,23 +591,10 @@
         "print('first_mid_last([6,1,7,3,5,8,2,3,6,1]) =', first_mid_last([6,1,7,3,5,8,2,3,6,1]))\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ONRAb-kZw2II",
-        "outputId": "68f379ee-4b16-4f43-ad36-6ef854b8cce5"
+        "id": "ONRAb-kZw2II"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "first_mid_last([1, 2, 3, 4, 5]) = [1, 3, 5]\n",
-            "first_mid_last([6,1,7,3,5,8,2,3,6,1]) = [6, 8, 1]\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -820,20 +635,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# TO DO: WRITE YOUR CODE/SOLUTION BELOW\n",
-        "def change_from_a_dollar(price) :\n",
-        "  '''A function that calculates how much change is needed from one dollar'''\n",
-        "\n",
-        "  number_of_quarters = (100 - price) // 25\n",
-        "  number_of_dimes = (100 - price -number_of_quarters * 25) // 10\n",
-        "  number_of_nickels = (100 - price - numbers_of_quarters*25 - number_of_dimes*10) // 5\n",
-        "  number_of_pennies = (100 - price - number_of_quaters*25 - number_of_dimes*10 -number_of_nickels*5)\n",
-        "  return [number_of_quarters, number_of_dimes, number_of_nickels, number_of_pennies]"
+        "# TO DO: WRITE YOUR CODE/SOLUTION BELOW"
       ],
       "metadata": {
         "id": "aViPf6m6c1Xn"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -852,23 +659,10 @@
         "print(\"change_from_a_dollar(42) returned\", change_from_a_dollar(42))\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GO6_z8S8xveV",
-        "outputId": "3dc3b222-b1e9-4b13-cc15-860a961c72a0"
+        "id": "GO6_z8S8xveV"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "change_from_a_dollar(22) returned [3, 0, 0, 3]\n",
-            "change_from_a_dollar(42) returned [2, 0, 1, 3]\n"
-          ]
-        }
-      ]
+      "outputs": []
     }
   ]
 }
